# wooting-analog-sdk

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile.toml  PLUGINS.md  README.md  SDK_USAGE.md  appveyor.yml  build.sh  clean.sh  env  env.cmd  plugin.sh  rust-toolchain  vendor.yml  win_build.ps1  win_build.sh  win_plugin.ps1  win_plugin.sh
.github/workflows/: deploy.yml  test.yml
analog-plugin/: Cargo.toml
analog-plugin-c/: .gitignore  CMakeLists.txt  Makefile  plugin.c  plugin.h
analog-plugin-c/includes/: CMakeLists.txt  hidapi.cmake
analog-plugin-c/src/: plugin.c  plugin.h
analog-plugin/src/: lib.rs
analog-sdk/: Cargo.toml  Makefile.toml
analog-sdk-common/: Cargo.toml  Makefile.toml  cbindgen-plugin.toml  cbindgen.toml
analog-sdk-test/: Program.cs  analog-sdk-test.csproj
analog-sdk-test/Properties/: launchSettings.json
analog-sdk-wrapper/: Cargo.toml  Makefile.toml  cbindgen.toml
analog-sdk-wrapper/src/: lib.rs
analog-sdk/src/: ffi.rs  keycode.rs  lib.rs  main.rs  sdk.rs
ci/: before_deploy.ps1  before_deploy.sh  codesign.ps1  codesign.sh  codesign_dll.sh  install.sh  script.sh  windowssign.sh
includes/: analog-sdk-common-plugin.h  analog-sdk-common.h  analog-sdk-wrapper.h  plugin.h  wooting-analog-common.h  wooting-analog-plugin-dev.h  wooting-analog-sdk-common-plugin.h  wooting-analog-sdk-common.h  wooting-analog-sdk-wrapper.h  wooting-analog-wrapper.h
includes-cpp/: .gitignore  analog-sdk-common-plugin.h  analog-sdk-common.h  analog-sdk-wrapper.h  wooting-analog-common.h  wooting-analog-plugin-dev.h  wooting-analog-sdk-common-plugin.h  wooting-analog-sdk-common.h  wooting-analog-sdk-wrapper.h  wooting-analog-wrapper.h
wooting-analog-common/: Cargo.toml  Makefile.toml  cbindgen.toml
wooting-analog-common/src/: lib.rs
wooting-analog-plugin/: Cargo.toml  Makefile.toml  README.md
wooting-analog-plugin-dev/: Cargo.toml  Makefile.toml  cbindgen.toml
wooting-analog-plugin-dev/src/: lib.rs
wooting-analog-plugin/src/: lib.rs
wooting-analog-sdk/: Cargo.toml  Makefile.toml  PKGBUILD  build.rs
wooting-analog-sdk-common/: Cargo.toml  Makefile.toml  cbindgen-plugin.toml  cbindgen.toml
wooting-analog-sdk-common/src/: lib.rs
wooting-analog-sdk-test/: Program.cs
wooting-analog-sdk-updater/: Cargo.toml
wooting-analog-sdk-updater/src/: install.ps1  main.rs
wooting-analog-sdk-wrapper/: Cargo.toml  Makefile.toml  cbindgen.toml
wooting-analog-sdk-wrapper/src/: lib.rs
wooting-analog-sdk/src/: cplugin.rs  ffi.rs  keycode.rs  lib.rs  sdk.rs
wooting-analog-sdk/test_c_plugin/: .gitignore  CMakeLists.txt
wooting-analog-sdk/test_c_plugin/src/: plugin.c
wooting-analog-sdk/wix/: main.wxs
wooting-analog-test/: Program.cs  wooting-analog-test.csproj
wooting-analog-test-plugin/: Cargo.toml  Makefile.toml
wooting-analog-test-plugin/src/: lib.rs
wooting-analog-virtual-control/: Cargo.toml
wooting-analog-virtual-control/src/: main.rs
wooting-analog-wrapper/: .gitignore  Cargo.toml  Makefile.toml  cbindgen.toml
wooting-analog-wrapper/python/: README.md
wooting-analog-wrapper/python/examples/: print_devices.py  read_all_keys.py  read_specific_key.py
wooting-analog-wrapper/src/: ffi.rs  lib.rs  python.rs
wooting-analog-wrapper/wooting_analog_wrapper/: __init__.py
