[profile.dev]
rpath = true

[profile.release]
rpath = true

[workspace]
resolver = "2"

members = [
    "wooting-analog-common",
    "wooting-analog-wrapper",
    "wooting-analog-plugin-dev",
    "wooting-analog-test-plugin",
    "wooting-analog-virtual-control",
    "wooting-analog-sdk-updater",
    "wooting-analog-plugin",
    "wooting-analog-sdk"

]