[package]
name = "wooting-analog-common"
version = "0.1.0"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/WootingKb/wooting-analog-sdk"
repository = "https://github.com/WootingKb/wooting-analog-sdk"
description = "Common elements of the Wooting Analog SDK"
keywords = [ "wooting", "keyboard", "analog", "sdk" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_primitive = "*"
log = "0.4.7"
ffi-support = "0.3.5"


[lib]
crate-type = ["staticlib", "rlib"]