[package]
name = "wooting-analog-common"
version = "0.3.0"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/WootingKb/wooting-analog-sdk"
repository = "https://github.com/WootingKb/wooting-analog-sdk"
description = "Common elements of the Wooting Analog SDK"
keywords = [ "wooting", "keyboard", "analog", "sdk" ]
documentation = "https://docs.rs/wooting-analog-common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_primitive = "0.1.1"
log = "0.4.7"
ffi-support = "0.3.5"


[lib]
crate-type = ["staticlib", "rlib"]