[package]
name = "wooting-analog-common"
version = "0.7.1"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/WootingKb/wooting-analog-sdk"
repository = "https://github.com/WootingKb/wooting-analog-sdk"
description = "Common elements of the Wooting Analog SDK"
keywords = [ "wooting", "keyboard", "analog", "sdk" ]
documentation = "https://docs.rs/wooting-analog-common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-primitive-derive = "0.2"
num-traits = "^0.1"
log = "0.4"
thiserror = "1.0"
ffi-support = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }


[lib]
crate-type = ["staticlib", "rlib"]

[features]
serdes = ["serde"]