[package]
name = "wooting-analog-plugin-dev"
version = "0.1.0"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wooting-analog-common = { path = "../wooting-analog-common"}
ffi-support = "0.3.5"


[lib]
crate-type = ["staticlib", "rlib"]