[package]
name = "wooting-analog-plugin-dev"
version = "0.2.0"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/WootingKb/wooting-analog-sdk"
repository = "https://github.com/WootingKb/wooting-analog-sdk"
description = "Library for designing plugins for the Wooting Analog SDK"
keywords = [ "wooting", "keyboard", "analog", "sdk", "plugin" ]
documentation = "https://docs.rs/wooting-analog-plugin-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#use this for local development
wooting-analog-common = { path = "../wooting-analog-common"}
#Use this when publishing
#wooting-analog-common = "0.1.0"
ffi-support = "0.3.5"


[lib]
crate-type = ["staticlib", "rlib"]