[package]
name = "wooting-analog-plugin"
version = "0.7.1"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"
license = "MPL-2.0"
description = "Wooting Analog Plugin for the Wooting Analog SDk"
repository = "https://github.com/WootingKb/wooting-analog-plugin"
homepage = "https://github.com/WootingKb/wooting-analog-plugin"
readme = "README.md"

[dependencies]
log = "^0.4"
# For dev
wooting-analog-plugin-dev = { path = "../wooting-analog-plugin-dev"}
# wooting-analog-plugin-dev = "^0.6"
hidapi = { version = "^1.2", features = ["linux-static-hidraw"], default-features = false }
env_logger = "^0.7"
objekt = "^0.1"
timer = "^0.2"
chrono = "^0.4"

[lib]
crate-type = ["cdylib"]
