[package]
name = "wooting-analog-sdk-common"
version = "0.1.0"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.9.0"

[dependencies]
enum_primitive = "*"
log = "0.4.7"
ffi-support = "0.3.5"


[lib]
crate-type = ["staticlib", "rlib"]