[package]
name = "wooting-analog-sdk-updater"
version = "0.0.0"
authors = ["simon-wh <simon.whyte.lb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
self_update = "0.6.0"
clap = "~2.33.0"
log = "0.4.8"
env_logger = "0.6.2"
json = "0.11.15"

[dependencies.winapi]
version = "0.3"
features = ["winuser"]