[package]
name = "wooting-analog-sdk"
version = "0.4.0"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"
license = "MPL-2.0"
description = "Wooting Analog SDK"
repository = "https://github.com/WootingKb/wooting-analog-sdk"
homepage = "https://github.com/WootingKb/wooting-analog-sdk"
keywords = [ "wooting", "keyboard", "analog", "sdk" ]
build = "build.rs"
#categories = []
#license-file = "../LICENSE"

[dependencies]
log = "0.4.7"
env_logger = "0.6.2"
libloading = "0.5.1"
error-chain = "0.12.1"
lazy_static = "*"
ffi-support = "0.3.5"
scancode = "0.1.2"
bimap = "0.3"
wooting-analog-common = { path = "../wooting-analog-common"}
wooting-analog-plugin-dev = { path = "../wooting-analog-plugin-dev"}

[dev-dependencies]
shared_memory = "0.8.2"

[build-dependencies]
cmake = "0.1"
wooting-analog-common = { path = "../wooting-analog-common"}
wooting-analog-plugin-dev = { path = "../wooting-analog-plugin-dev"}


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["winuser"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.deb]
assets = [
    ["../target/release-artifacts/libwooting_analog_sdk.so", "usr/lib/", "755"],
    ["../target/release-artifacts/libwooting_analog_plugin.so", "usr/local/share/WootingAnalogPlugins/wooting-analog-plugin/", "755"],
    ["../target/release-artifacts/libwooting_analog_test_plugin.so", "usr/local/share/WootingAnalogPlugins/wooting-test-plugin/", "755"],
    ["../target/release-artifacts/wooting-analog-virtual-control", "usr/bin/", "755"],
]
depends = "$auto"
priority = "optional"