[package]
name = "wooting-analog-sdk"
version = "0.7.0"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"
license = "MPL-2.0"
description = "Wooting Analog SDK"
repository = "https://github.com/WootingKb/wooting-analog-sdk"
homepage = "https://github.com/WootingKb/wooting-analog-sdk"
keywords = [ "wooting", "keyboard", "analog", "sdk" ]
build = "build.rs"
#categories = []
#license-file = "../LICENSE"

[dependencies]
log = "0.4"
env_logger = "^0.7"
libloading = "0.6"
anyhow = "~1.0"
lazy_static = "*"
ffi-support = "0.4"
scancode = "0.1.2"
bimap = "0.4"
wooting-analog-common = { path = "../wooting-analog-common"}
wooting-analog-plugin-dev = { path = "../wooting-analog-plugin-dev"}

[dev-dependencies]
shared_memory = "^0.8"

[build-dependencies]
cmake = "0.1"
wooting-analog-common = { path = "../wooting-analog-common"}
wooting-analog-plugin-dev = { path = "../wooting-analog-plugin-dev"}


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.deb]
assets = [
    ["../target/release-artifacts/libwooting_analog_sdk.so", "usr/lib/", "755"],
    ["../target/release-artifacts/libwooting_analog_plugin.so", "usr/local/share/WootingAnalogPlugins/wooting-analog-plugin/", "755"],
    ["../target/release-artifacts/libwooting_analog_test_plugin.so", "usr/local/share/WootingAnalogPlugins/wooting-test-plugin/", "755"],
    ["../target/release-artifacts/wooting-analog-virtual-control", "usr/bin/", "755"],
]
depends = "libhidapi-hidraw0, libudev1, $auto"
priority = "optional"
