[package]
name = "wooting-analog-virtual-control"
version = "0.1.0"
authors = ["simon-wh <simon.whyte.lb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wooting-analog-common = { path = "../wooting-analog-common"}
shared_memory = "0.8.2"
log = "0.4.7"
#gdk = "0.11.0"
iced = { git = "https://github.com/hecrj/iced" }
env_logger = "0.7.1"
lazy_static = "*"

#[dependencies.gtk]
#version = "0.7.0"
#features = ["v3_16"]
#
#[dependencies.gio]
#version = ""
#features = ["v2_44"]