[package]
name = "wooting-analog-virtual-control"
version = "0.7.0"
authors = ["simon-wh <simon.whyte.lb@gmail.com>"]
edition = "2018"


[dependencies]
wooting-analog-common = { path = "../wooting-analog-common"}
shared_memory = "^0.8"
log = "^0.4"
iced = "^0.4"
env_logger = "0.8"
lazy_static = "*"
wooting-analog-test-plugin = { path="../wooting-analog-test-plugin" }
