[package]
name = "wooting-analog-wrapper"
version = "0.7.1"
authors = ["simon-wh <simon.whyte.lb@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/WootingKb/wooting-analog-sdk"
repository = "https://github.com/WootingKb/wooting-analog-sdk"

[dependencies]
lazy_static = "*"
libloading = "^0.5"
wooting-analog-common = { path = "../wooting-analog-common"}
ctrlc = { version = "3", features = ["termination"] }

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["print-errors"]
serdes = ["wooting-analog-common/serdes"]
print-errors = []
